check_PROGRAMS = image
TESTS = $(check_PROGRAMS)

image_SOURCES = image.c
image_CFLAGS = $(GLOBAL_CFLAGS) $(SWFDEC_CFLAGS) $(CAIRO_CFLAGS)
image_LDFLAGS = $(SWFDEC_LIBS) $(CAIRO_LIBS)

EXTRA_DIST = \
	README \
	blend-mode.c \
	blend-mode-0-7.swf \
	blend-mode-0-7.swf.png \
	blend-mode-0-8.swf \
	blend-mode-0-8.swf.png \
	blend-mode-15-7.swf \
	blend-mode-15-7.swf.png \
	blend-mode-15-8.swf \
	blend-mode-15-8.swf.png \
	blend-mode-add-7.swf \
	blend-mode-add-7.swf.png \
	blend-mode-add-8.swf \
	blend-mode-add-8.swf.png \
	blend-mode-alpha-7.swf \
	blend-mode-alpha-7.swf.png \
	blend-mode-alpha-8.swf \
	blend-mode-alpha-8.swf.png \
	blend-mode-darken-7.swf \
	blend-mode-darken-7.swf.png \
	blend-mode-darken-8.swf \
	blend-mode-darken-8.swf.png \
	blend-mode-difference-7.swf \
	blend-mode-difference-7.swf.png \
	blend-mode-difference-8.swf \
	blend-mode-difference-8.swf.png \
	blend-mode-erase-7.swf \
	blend-mode-erase-7.swf.png \
	blend-mode-erase-8.swf \
	blend-mode-erase-8.swf.png \
	blend-mode-hardlight-7.swf \
	blend-mode-hardlight-7.swf.png \
	blend-mode-hardlight-8.swf \
	blend-mode-hardlight-8.swf.png \
	blend-mode-inverse-7.swf \
	blend-mode-inverse-7.swf.png \
	blend-mode-inverse-8.swf \
	blend-mode-inverse-8.swf.png \
	blend-mode-layer-7.swf \
	blend-mode-layer-7.swf.png \
	blend-mode-layer-8.swf \
	blend-mode-layer-8.swf.png \
	blend-mode-lighten-7.swf \
	blend-mode-lighten-7.swf.png \
	blend-mode-lighten-8.swf \
	blend-mode-lighten-8.swf.png \
	blend-mode-multiply-7.swf \
	blend-mode-multiply-7.swf.png \
	blend-mode-multiply-8.swf \
	blend-mode-multiply-8.swf.png \
	blend-mode-normal-7.swf \
	blend-mode-normal-7.swf.png \
	blend-mode-normal-8.swf \
	blend-mode-normal-8.swf.png \
	blend-mode-overlay-7.swf \
	blend-mode-overlay-7.swf.png \
	blend-mode-overlay-8.swf \
	blend-mode-overlay-8.swf.png \
	blend-mode-screen-7.swf \
	blend-mode-screen-7.swf.png \
	blend-mode-screen-8.swf \
	blend-mode-screen-8.swf.png \
	blend-mode-subtract-7.swf \
	blend-mode-subtract-7.swf.png \
	blend-mode-subtract-8.swf \
	blend-mode-subtract-8.swf.png \
	bw.jpg \
	color-transform-add80.swf \
	color-transform-add80.swf.png \
	color-transform-add80-alpha.swf \
	color-transform-add80-alpha.swf.png \
	duplicate-depth.c \
	duplicate-depth-5.swf \
	duplicate-depth-5.swf.png \
	duplicate-depth-6.swf \
	duplicate-depth-6.swf.png \
	duplicate-depth-7.swf \
	duplicate-depth-7.swf.png \
	image-jpeg-alpha.swf \
	image-jpeg-alpha.swf.png \
	image-lossless-alpha.swf \
	image-lossless-alpha.swf.png \
	negative-color-transform.c \
	negative-color-transform.swf \
	negative-color-transform.swf.png \
	placeobject-ratio.swf \
	placeobject-ratio.swf.png \
	placeobject-ratio.xml \
	replace.c \
	replace-button-button-5.swf \
	replace-button-button-5.swf.png \
	replace-button-button-6.swf \
	replace-button-button-6.swf.png \
	replace-button-button-7.swf \
	replace-button-button-7.swf.png \
	replace-button-movie-5.swf \
	replace-button-movie-5.swf.png \
	replace-button-movie-6.swf \
	replace-button-movie-6.swf.png \
	replace-button-movie-7.swf \
	replace-button-movie-7.swf.png \
	replace-button-shape-5.swf \
	replace-button-shape-5.swf.png \
	replace-button-shape-6.swf \
	replace-button-shape-6.swf.png \
	replace-button-shape-7.swf \
	replace-button-shape-7.swf.png \
	replace-movie-button-5.swf \
	replace-movie-button-5.swf.png \
	replace-movie-button-6.swf \
	replace-movie-button-6.swf.png \
	replace-movie-button-7.swf \
	replace-movie-button-7.swf.png \
	replace-movie-movie-5.swf \
	replace-movie-movie-5.swf.png \
	replace-movie-movie-6.swf \
	replace-movie-movie-6.swf.png \
	replace-movie-movie-7.swf \
	replace-movie-movie-7.swf.png \
	replace-movie-shape-5.swf \
	replace-movie-shape-5.swf.png \
	replace-movie-shape-6.swf \
	replace-movie-shape-6.swf.png \
	replace-movie-shape-7.swf \
	replace-movie-shape-7.swf.png \
	replace-shape-button-5.swf \
	replace-shape-button-5.swf.png \
	replace-shape-button-6.swf \
	replace-shape-button-6.swf.png \
	replace-shape-button-7.swf \
	replace-shape-button-7.swf.png \
	replace-shape-movie-5.swf \
	replace-shape-movie-5.swf.png \
	replace-shape-movie-6.swf \
	replace-shape-movie-6.swf.png \
	replace-shape-movie-7.swf \
	replace-shape-movie-7.swf.png \
	replace-shape-shape-5.swf \
	replace-shape-shape-5.swf.png \
	replace-shape-shape-6.swf \
	replace-shape-shape-6.swf.png \
	replace-shape-shape-7.swf \
	replace-shape-shape-7.swf.png

