check-local: ../swfdec-test
	CUR_DIR=`pwd`; cd $(srcdir) && $$CUR_DIR/../swfdec-test *.swf

EXTRA_DIST = \
	default.stas \
	default.sts \
	hello-world-6.swf \
	hello-world-6.swf.dump \
	hello-world-6.swf.trace \
	hello-world-7.swf \
	hello-world-7.swf.dump \
	hello-world-7.swf.trace \
	hello-world-8.swf \
	hello-world-8.swf.dump \
	hello-world-8.swf.trace \
	hello-world.as \
	README
